--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -23,8 +23,8 @@
     <color name="colorFAFAFA">#FAFAFA</color>
     <color name="color666666">#666666</color>
     <color name="color0FB7FF">#0FB7FF</color>
-    <color name="colorfff3ce">#fff3ce</color>
+    <color name="colorFFF3CE">#fff3ce</color>
     <color name="colorFE3732">#FE3732</color>
-    <color name="color10_26b7bc">#1A26b7bc</color>
+    <color name="color1A26B7BC">#1A26B7BC</color>
     <color name="color88000000">#88000000</color>
 </resources>
